============= Changelog for ProceduralParts  =========

=== 1.1.1 ===
Part icons in editor show the correct mesh and texture
Ore tank got an oreish grey texture
Fixed the bug that crashes KSP when launching a craft consisting of exclusively PP parts

=== 1.1.0 ===
KSP 1.0.2 compatible
Tech-constraints apply after loading a craft
Support for RF 8.5s gimbal modifying
Parts apply to the new stock tech-tree
New curve 'waisted' for smooth cone shapes
Stock aero compatible heat shield
Texture format changed to dds
Offset parts now stay were they were after loading a craft in editor
Procedural ore tank
Maximum temperatures of nearly every procedural part changed
Texture 'ablative' endcap changed
No more crafts bouncing off the ground at launch when the lowest part is a procedural part
Liquid fuel tanks now holding 60% more liquid fuel
Oxidizer tanks now holding 60% more oxidizer
Big parts have reduced triangle count

=== 1.0.2 ===
Shapes now use as much polygons as before 1.0.1

=== 1.0.1 ===
Fixed a bug that appeared when the stack below a procedural SRB contained the root part.
Added procedural liquid fuel tank cone
Tweaked nose cone cost and mass
Cost display now shows dry and actual cost
Shapes now use much less polygons

=== 1.0.0 ===
Use the engine wrapper module so that hot rockets can be used.
Official support for Kethane / Extraplanetary Lanchpads / TAC
Allow either end of cone shapes to be the small end
Support for rebuilding the drag model in Ferram Aerospace Research
Battery Part
Shape limiting on tech levels.
Implement procedural cost support (needs balancing)
Switch to PNG until Squad fixes the TGA loader bug.
Various bugfixes and tweaks.

=== 0.9.0 ===
Procedural heat-shields for Deadly Re-entry
Procedural tanks for resources in other mods: Kethane, TAC, Extraplanetary Launchpads
Ability to display numbers in tweaker interface using SI prefixes and significant figures
Xenon Tank
Hiding of parts depending on what addins are installed