@@ -4,6 +4,7 @@
 Part icons in editor show the correct mesh and texture
 Ore tank got an oreish grey texture
 Fixed the bug that crashes KSP when launching a craft consisting of exclusively PP parts
+No procedural drag cube generation if FAR is installed
 
 === 1.1.0 ===
 KSP 1.0.2 compatible
